# crew-ai-agent

./: Dockerfile  README.md  app.py  docker-compose.yml  fly.toml  pyproject.toml  worker.py
src/agent_tools/: astra_db_ragging_tool.py
src/agents/: __init__.py
src/agents/crewai_document_summariser/: crew.py
src/agents/crewai_primer_maker/: crew.py  main.py
src/agents/crewai_sales_personalized_email/: crew.py  main.py
src/agents/crewai_text_to_schema/: main.py
src/configs/: celery_config.py
src/crewai_customer_research/: crew.py  main.py
src/crewai_customer_research/config/: agents.yaml  tasks.yaml
src/crewai_customer_research/models/: agent_input.py  email_output.py
src/crewai_document_summariser/: main.py
src/crewai_document_summariser/config/: agents.yaml
src/crewai_plus_lead_scoring/: crew.py  main.py
src/crewai_plus_lead_scoring/config/: tasks.yaml
src/crewai_primer_maker/: crew.py  main.py
src/crewai_primer_maker/config/: tasks.yaml
src/crewai_primer_maker/model/: primer_request.py
src/models/: base_models.py  lead_analysis_request.py  primer_request.py  task_models.py
src/sales_personalized_email/: crew.py  main.py
src/sales_personalized_email/config/: tasks.yaml
src/sales_personalized_email/models/: agent_input_model.py
src/sales_personalized_email/template/: cold_message.md
src/tasks/: celery_tasks.py
src/text_to_schema/: crew.py
src/text_to_schema/config/: tasks.yaml
src/utils/: astradb_utils.py  auth.py  file_processsing.py  redis_vectorstore.py  shared.py  supabase_utils.py
(+11 files in other folders)
