[project]
name = "crewai_plus_lead_scoring"
version = "0.1.0"
description = "crewai-plus-lead-scoring using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.11,<=3.13"
dependencies = [
    "astrapy>=2.0.1",
    "celery>=5.5.2",
    "crewai[tools]>=0.76.2",
    "faiss-cpu>=1.11.0",
    "fastapi[standard]>=0.115.12",
    "langchain-huggingface>=0.1.2",
    "langchain-redis>=0.2.1",
    "psutil>=7.0.0",
    "pydantic>=2.11.3",
    "redis>=5.2.1",
    "sentence-transformers>=4.1.0",
    "supabase>=2.15.1",
]

[project.scripts]
crewai_plus_lead_scoring = "crewai_plus_lead_scoring.main:run"
run_crew = "crewai_plus_lead_scoring.main:run"
train = "crewai_plus_lead_scoring.main:train"
replay = "crewai_plus_lead_scoring.main:replay"
test = "crewai_plus_lead_scoring.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
